--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
+include ':common'
+include ':lib_combine'
+include ':lib_rssi'
+include ':lib_pdr'
 include ':app'
 rootProject.name = "IndoorPosition"
