--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zzy.common">
 
+    <!--计步传感器权限-->
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+
 </manifest>
