--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -5,4 +5,9 @@
     <!--计步传感器权限-->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
 
+    <!--wifi信号获取权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
 </manifest>
