--- a/common/build.gradle
+++ b/common/build.gradle
@@ -42,6 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    api 'com.google.code.gson:gson:2.8.1'
+    api 'com.squareup.okhttp3:okhttp:4.9.0'
 }
