--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zzy.common">
 
+    <!--网络权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!--计步传感器权限-->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
 
